--- a/style.css
+++ b/style.css
@@ -1,47 +1,57 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Gilroy";
 }
-html,body{
-    width: 100%;
-    height: 100%;
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
 
-#main{
-    width: 100%;
-    height: 100%;
-    background-color: red;
-    display: flex;
+#main {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
 }
-#left{
-    width: 40%;
-    height: 100%;
-    background-color: yellow;
+#left {
+  width: 40%;
+  height: 100%;
 }
-#right{
-    width: 60%;
-    height: 100%;
-    background-color:white;
+#lnav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 20px 30px;
 }
-#rtop{
-    width: 100%;
-    height: 50%;
-    background-color: cyan;
-    display: flex;
+#lnavr a {
+  margin-left: 20px;
 }
-#rtopleft{
-    width: 55%;
-    height: 100%;
-    background-color: green;
+#right {
+  width: 60%;
+  height: 100%;
+  background-color: white;
 }
-#rtopright{
-    width: 45%;
-    height: 100%;
-    background-color:rebeccapurple;
+#rtop {
+  width: 100%;
+  height: 50%;
+  background-color: cyan;
+  display: flex;
 }
-#rbottom{
-    width: 100%;
-    height: 50%;
-    background-color: orangered;
+#rtopleft {
+  width: 55%;
+  height: 100%;
+  background-color: green;
+}
+#rtopright {
+  width: 45%;
+  height: 100%;
+  background-color: rebeccapurple;
+}
+#rbottom {
+  width: 100%;
+  height: 50%;
+  background-color: orangered;
 }
