--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 #left {
   width: 40%;
   height: 100%;
+  position: relative;
 }
 #lnav {
   display: flex;
@@ -39,9 +40,36 @@ body {
   font-size: 14px;
 
 }
-lnavr{
+#lnavr i{
   color: royalblue;
 }
+#left #textcenter{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+#textcenter h1{
+   font-size: 90px;
+   font-weight: 900;
+}
+#textcenter p{
+  opacity: .6;
+  font-size: 12px;
+  line-height: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#textcenter a{
+  text-decoration: none;
+  color: black;
+  border-bottom: 1px solid #000;
+  padding-bottom: 5px;
+  font-size: 13px;
+  font-weight: 600;
+  opacity: .6;
+}
+
 #right {
   width: 60%;
   height: 100%;
@@ -56,15 +84,21 @@ lnavr{
 #rtopleft {
   width: 55%;
   height: 100%;
-  background-color: green;
+  background-image: url(https://images.unsplash.com/photo-1557800636-894a64c1696f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGZydWl0c3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60);
+  background-size: cover;
+  background-position: center;
 }
 #rtopright {
   width: 45%;
   height: 100%;
-  background-color: rebeccapurple;
+  background-image: url(https://images.unsplash.com/photo-1586788224331-947f68671cf1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzZ8fGZydWl0c3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60);
+  background-size: cover;
+  background-position: center;
 }
 #rbottom {
   width: 100%;
   height: 50%;
-  background-color: orangered;
+  background-image: url(https://images.unsplash.com/photo-1619241638225-14d56e47ae64?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTB8fGZydWl0c3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60);
+  background-size: cover;
+  background-position: center;
 }
